--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link data-trunk rel="copy-dir" href="static" />
     <link data-trunk rel="css" href="style.css" />
     <link data-trunk rel="icon" type="image/x-icon" href="favicon.png" />
     <title>Lucian's Rusty Mancala Game</title>
