--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <link data-trunk rel="copy-dir" href="static" />
-    <link data-trunk rel="css" href="style.css" />
-    <link data-trunk rel="icon" type="image/x-icon" href="favicon.png" />
+    <link href="static/style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="static/favicon.png">
     <title>Lucian's Rusty Mancala Game</title>
 </head>
 <body class="background">
