--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link data-trunk rel="copy-dir" href="static" />
+    <link data-trunk rel="copy-dir" href="static">
     <link href="static/style.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="static/favicon.png">
     <title>Lucian's Rusty Mancala Game</title>
