--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,17 @@
     <link rel="icon" type="image/x-icon" href="static/favicon.png">
     <title>Lucian's Rusty Mancala Game</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BQM9VZTTF4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BQM9VZTTF4');
+</script>
+
 <body class="background">
 <div id="root"></div>
 
